--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background: rgb(197, 50, 72);
+    background: red;
     padding: 2rem;
     grid-column: 1 / 8;
     grid-row: 1/2;  
@@ -17,10 +17,11 @@ header {
 
 .navigation ul{
     list-style-type: none;
-    background-color: hsl(0, 0%, 25%);
+    background-color: hsl(0, 0%, 20%);
     padding: 0px;
     margin: 0px;
     overflow: hidden;
+    
 }
 
 .navigation {
@@ -35,7 +36,7 @@ header {
     text-decoration: none;
     padding: 2rem;
     display: block;
-    text-align: center;
+    
 }
 .navigation a:hover{
     background-color: hsl(0, 0%, 10%);
@@ -49,7 +50,7 @@ header {
     background: rgb(116, 105, 154);
     grid-column: 1/7;
     grid-row: 3/7;
-    padding: 1rem;
+    padding: 2rem;
     
 }
 .right-sidebar {
