--- a/index.html/styles/base.css
+++ b/index.html/styles/base.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
-    grid-template-rows: repeat(6, 100px);
-    grid-template-columns: repeat(6, 100px);
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     
     margin: 0;
 
@@ -18,7 +18,7 @@ header {
 .navigation ul{
     list-style-type: none;
     background-color: black;
-    padding: 0px;
+    padding: -1px;
     margin: 0px;
     
 }
@@ -40,7 +40,7 @@ header {
     background-color: #0FA4AF
 }
 
-@media (min-width: 500px){
+@media screen and (min-width: 500px){
     nav ul {
         display: flex;
         
@@ -52,7 +52,17 @@ header {
 
 
 main {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    .card1{
+        grid-column: 1/3;
+        grid-row: 1/3;
+    }
+    .card2 {
+        grid-column: 3/4;
+        grid-row: 1/3;
+    }
     background-color: #AFDDE5;
     grid-column: 1/8;
     grid-row: 3/7;
@@ -66,21 +76,15 @@ section{
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 6px rgba(108, 96, 96, 0.674)
+    
 }
-.card1{
-    grid-column: 1/4;
-    grid-row: 3/7;
-}   
+ 
 .city{
     background-color: #024950;
     color: white
 }
 
-.card2{     
-    grid-column: 4/7;
-    grid-row: 3/7; 
-        
-}
+ 
     
 
 h2{
@@ -89,19 +93,17 @@ h2{
     padding: 1rem;
 }
 
+.navbar2 {
 
+}
 
 footer{
-     
+ 
     background-color: #964734;
     padding: 2rem;
     text-align: center;
     grid-column: 1/8;
     grid-row: 7/8;
-}
-.flag{
-
-
 }
 
   
