--- a/styles/temples.css
+++ b/styles/temples.css
@@ -4,6 +4,19 @@
 	box-sizing: border-box;
     font-family: "Sansita", sans-serif;
 }
+
+h1 {
+    text-align: left;
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+h2 {
+    font-size: 2rem;
+    text-align: center;
+    
+}
+
+
 body {
     
     margin: 0;
@@ -15,49 +28,59 @@ header {
         text-align: center;
         padding: 1rem;     
         display: grid;
+        grid-gap: 1rem;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr; 
+        
 }
-nav ul li:first-child {
-    display: block;
-    padding-top: 0;
-    padding-right: 0;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 1rem;
-    margin-left: 10rem;
-}
-nav ul li {
-    display: none;
-    list-style: none;
-    margin: 10px;
+.nav{
+    max-width: 700px;
+    margin: 1rem auto;
 }
 
-.menu ul {
-    list-style: none;
-    padding: 1rem;
+header,main {
+	margin: 0 auto;
+}
+
+#menu {
+	border: 0;
+	background: none;
+	color: #000;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+}
+#menu::before {
+	content: "☰";
+    margin-right: 1rem;
     
 }
 
-nav ul li a {
-    text-decoration: none; 
-    color: aliceblue;
+#menu.open::before {
+	content: "x";
+}
+.navigation {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+}
+.navigation a {
+	display: none;
+	padding: 1rem;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+}
+.navigation a:hover {
+	color: #030101;
+	
+    background-color: skyblue;
 }
 
-.menu a:hover{
-    background-color: #efefef;
-    padding: 10px;
-    color: #2e7c83;
+.open a{
+    display: block;
 }
 
-
-
-.title {
-    text-align: center;
-    padding: 10px;
-    margin: 0%;
-
-}
 
 .pictures {
     display: flex;
@@ -71,7 +94,8 @@ nav ul li a {
 footer {
     background-color: #0FA4AF;
     color: white;
-    padding: 5px;
+    padding: 2rem;
     text-align: center;
+    margin-bottom: 0;
     
 }
