--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,4 +1,89 @@
-@media screen and (min-width: 640px){
+@media (min-width: 780px) {
 
+    .hero {
+        width: 100%;
+        height: 100%;
+    }
 
+    .lista1 {
+        justify-content:end;
+        position: absolute;
+        top:30px;
+        left:30px;
+        height: 350px;
+        font-size: 1.2rem;
+
+    }
+    .lista1 h2{
+        width: 90%;
+        position:absolute;
+        background-color: rgb(55, 154, 121);
+        top:35px;
+        left:-15px;
+        padding: 1rem;
+        text-align: left;
+        
+    }
+
+    .data1 {
+        background-color: rgba(240, 233, 233, 0.747);
+        padding: 1.5rem;
+        height: 90%;
+        box-shadow: 0 4px 8px rgb(56, 185, 199);
+        display: flex;
+        align-items: end;
+    }
+
+    .lista2{
+        display: flex;
+        justify-content:end;
+        position: absolute;
+        font-size: 1.2rem;
+        bottom:30px;
+        right:30px;
+        height: 310px;
+    }
+
+    .data2{
+        background-color: rgba(240, 233, 233, 0.747);
+        padding: 1.5rem;
+        height: 90%;
+        box-shadow: 0 4px 8px rgb(56, 185, 199);
+        display: flex;
+        align-items: end;
+        
+    }
+
+    .lista2 h2{
+        width: 90%;
+        position:absolute;
+        background-color: rgb(55, 154, 121);
+        top:35px;
+        left:-15px;
+        padding: 1rem;
+        text-align: left;
+    }
+
+    .lista2 h2::after{
+    content: "🌤️";
+    }
+
+    
+    table{
+        margin: 0 auto;
+    }
+    tr{
+        text-align: right;
+    }
+    td{
+        text-align: left;
+    }
+
+    footer {
+
+        color: white;
+        background-color: rgb(222, 113, 113);
+        text-align: center;
+        padding: 1rem;
+    }
 }
