--- a/styles/place.css
+++ b/styles/place.css
@@ -1,55 +1,81 @@
 * {
 	margin: 0;
 	padding: 0;
-	
+	box-sizing: border-box;
     font-family: "Sansita", sans-serif;
 }
-label, p{
-    display: inline;
-}
 
-header{
-    color: white;
-    background-color: rgb(222, 113, 113);
+.hero{
+    width: 100%;
+    height: 100%;
+}
+h1 {
     text-align: center;
-    padding: 2rem;
+    margin: 1rem;
 }
-
-
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
-}
-picture {
-    grid-column: 1/4;
-    
-    background-color: aqua;
-}
-
-
-
 h2 {
     color:azure;
     padding: 1rem;
     margin-right: 1rem;
     display: inline-block;
-    background-color: rgb(93, 180, 151);
+    background-color: rgb(55, 154, 121);
     padding-right: 30%;
     
 }
-
-.lista {
-    background-color: whitesmoke;
-    box-shadow: rgb(94, 89, 89);
-    margin: 10%;
+header{
+    color: white;
+    background-color: rgb(222, 113, 113);
+    padding: 1rem;
+    display: grid;
+	padding: 10px;
 }
-ul, li{
-    list-style: none;
-    padding: 10px;
-    margin: 0;
+section{
     text-align: center;
+    padding: 1rem;
 }
+
+.lista1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;    
+    margin: 1rem;
+    background-color: whitesmoke;
+    margin: 5%;
+}
+
+.lista2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;    
+    margin: 1rem;
+    background-color: whitesmoke;
+    margin: 5%;
+}
+
+.data1 {
+    display:contents;
+    text-align: center;
+    width: 100%;
+}
+.data2 {
+    display:contents;
+    text-align: center;
+    width: 100%;
+}
+table{
+    margin: 0 auto;
+    
+}
+tr{
+    text-align: right;
+}
+td{
+    text-align: left;
+    
+}
+
 footer {
     color: white;
     background-color: rgb(222, 113, 113);
@@ -57,13 +83,5 @@ footer {
     padding: 1rem;
 }
 
-@media screen and (max-width: 640px){
-    main{
-        display: block;
-        margin: 0;
-        padding: 0;
-    }
-    
 
-}
 
