--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,15 +1,15 @@
-@media (min-width: 780px) {
+@media  (min-width: 1000px)  {
 
-    .hero {
+    .responsive {
+        position: relative;
         width: 100%;
-        height: 100%;
     }
 
     .lista1 {
-        justify-content:end;
         position: absolute;
-        top:30px;
+        justify-content:end;
         left:30px;
+        top:30px;
         height: 350px;
         font-size: 1.2rem;
 
