--- a/styles/place.css
+++ b/styles/place.css
@@ -5,13 +5,15 @@
     font-family: "Sansita", sans-serif;
 }
 
-.hero{
+.responsive img{
     width: 100%;
-    height: 100%;
+    height: auto;
+    
 }
 h1 {
     text-align: center;
     margin: 1rem;
+    
 }
 h2 {
     color:azure;
@@ -28,6 +30,7 @@ header{
     padding: 1rem;
     display: grid;
 	padding: 10px;
+    
 }
 section{
     text-align: center;
