--- a/styles/final.css
+++ b/styles/final.css
@@ -11,6 +11,7 @@ h1 {
     margin-top: 1rem;
 }
 h2 {
+    margin-top: 5%;
     color: #000;
     font-size: 2rem;
     text-align: center;
@@ -19,19 +20,21 @@ h2 {
 
 
 body {
-    
-    margin: 0;
-    
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    padding: 10px;
 }
 header {
         background: #932458;
         color: white;
         text-align: center;
         padding: 1rem;    
+        
 }
 .nav{
     max-width: 700px;
     margin: 1rem auto;
+    
 }
 
 header,main {
@@ -70,7 +73,7 @@ header,main {
 .navigation a:hover {
 	color: #030101;
 	
-    background-color: skyblue;
+    background-color: #e376a9;
 }
 
 .open a{
@@ -83,7 +86,19 @@ header,main {
     flex-direction: column;
     padding: 5px;
     text-align: center;
-    margin: 10px;
+    background: #ede9e9;
+    padding: 20px;
+    margin-top: 20px;  
+}
+
+
+img {
+    margin-top: 5%;
+    
+}
+figure img{
+    border: 1px solid #1c1b1b;
+    border-radius: 5%;
     
 }
 
