--- a/styles/final-large.css
+++ b/styles/final-large.css
@@ -17,6 +17,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+        
 	}
 	
 	.navigation {
@@ -57,7 +58,16 @@
 		flex: 1 1 100%;
 	}
     h2 {
-	  
-        margin-top: 1%;
-	}
+        margin-top: -2%;
+        margin-bottom: -10%;
+        
+    }
+    figure{
+        margin: 10%;
+        
+    }
+    main {
+        padding: 8%;
+    }
+    
 }
