--- a/styles/final.css
+++ b/styles/final.css
@@ -11,7 +11,7 @@ h1 {
     margin-top: 1rem;
 }
 h2 {
-    margin-top: 5%;
+    padding: 5%;
     color: #000;
     font-size: 2rem;
     text-align: center;
@@ -21,7 +21,7 @@ h2 {
 
 body {
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: #ede9e9;
     padding: 10px;
 }
 header {
@@ -86,7 +86,8 @@ header,main {
     flex-direction: column;
     padding: 5px;
     text-align: center;
-    background: #ede9e9;
+    border-radius: 2rem;
+    border: 1px solid;
     padding: 20px;
     margin-top: 20px;  
 }
