--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -17,7 +17,7 @@ h2 {
     padding: 1rem;
     color: rgb(0, 0, 0);
     border-radius: 15px;
-    border: 1px solid;
+    border: 1px solid #932458;
     justify-content: right;
 }
 footer, p{
