--- a/styles/final.css
+++ b/styles/final.css
@@ -102,7 +102,13 @@ figure img{
     border-radius: 5%;
     
 }
-
+.regresar {
+    width: 100%;
+    background-color: rgb(155, 214, 207);
+    text-decoration: solid;
+    color: black;
+    padding: .5rem .5rem;
+}
 footer {
     background-color: #C53678;
     color: white;
